minor edits through intro

--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -28,7 +28,7 @@ affiliation:
 authornote: |
 
 abstract: |
- Childen's drawings of common object categories become dramatically more recognziable across development. What are the major factors that explain this developmental change? Here, we examined the degree to which these developmental changes in recognizibility vary across different drawing tasks (i.e. drawing from observation vs. from memory), geographical locations (San Jose, US vs. Beijing, China), and with children's tracing abilities. To do so, we collecting digital drawings of object categories (e.g., cat, airplane) from 4-9 year-olds (N=253). Overall, we show broad consistency in these developmental trajectories acros both drawing tasks and these two geographical locations, and we find that children's tracings abilites are good predictors of the recognizability of the drawings that they produce. In addition, we find that children from Beijing, China produced more recognizable drawings but showed similar tracing abilities to childen from San Jose, USA. Overall, this work suggests that the developmental trajectory of children's drawings are remarkably consistent and not easily explainable by changes in their visuomotor control or working memory capacity. 
+ Childen's drawings of common object categories become dramatically more recognziable across development. What are the major factors that explain this developmental change? Here we examined the degree to which these developmental changes in recognizibility vary across different drawing tasks (i.e. drawing from observation vs. from memory), geographical locations (San Jose, US vs. Beijing, China), and with children's tracing abilities. To do so, we collecting digital drawings of object categories (e.g., cat, airplane) from 4-9 year-olds (N=253). Overall, we show broad consistency in these developmental trajectories across both drawing tasks and these two geographical locations, and we find that children's tracings abilites are good predictors of the recognizability of the drawings that they produce. In addition, we find that our Beijing sample produced more recognizable drawings but showed similar tracing abilities to childen from San Jose, USA. Overall, this work suggests that the developmental trajectory of children's drawings are remarkably consistent and not easily explainable by changes in visuomotor control or working memory capacity. 
  
 keywords          : "children's drawings, visual production, tracing, object recognition, visuomotor control"
 wordcount         : "X"
@@ -69,35 +69,35 @@ knitr::opts_chunk$set(fig.crop = FALSE,
                       cache=FALSE, message = FALSE, sanitize = TRUE)
 ```
 
-As humans, we have many powerful tools to externalize what we know, including language and gesture.
-One tool that has been transformative for human cognition and culture is graphical representation, which allows people to encode their thoughts in a visible, durable format. 
+As humans, we have many powerful tools to externalize what we perceive and know, including language and gesture.
+One tool that has been especially transformative for human cognition and culture is graphical representation, which allows people to encode their thoughts in a visible, durable format. 
 Drawing is an important case study in graphical representation, being a technique that dates back 60,000 years [@hoffmann2018u], well before the emergence of symbolic writing systems, and is practiced in many cultures.
 
 In modern times, drawings are produced prolifically by children from an early age. 
-Figurative drawings have long provided inspiration for scientists investigating children's emerging cognitive abilities [@minsky1972artificial], and accordingly a long history of work has examined changes in children's drawings across development [@piaget1929child; @kellogg1969analyzing; @karmiloff1990constraints; @fury1997children].
-Indeed, there appear to be dramatic changes in how children encode diagnostic visual information in their drawings across age; younger children (4-5 years) tend to include fewer cues in their drawings to differentiate between target concepts (e.g., \textit{adult} vs. \textit{child}) than older children, who enrich their drawings with more diagnostic part [@sitton1992drawing] and relational [@light1983effects] information. 
+Figurative drawings have long provided inspiration for scientists investigating children's emerging cognitive abilities [@minsky1972artificial], and accordingly a long history of work has examined changes in how children draw objects across development [@piaget1929child; @kellogg1969analyzing; @karmiloff1990constraints; @fury1997children].
+Indeed, there appear to be dramatic changes in how children encode diagnostic visual information in their drawings across age: younger children (4-5 years) tend to include fewer cues in their drawings to differentiate between target concepts (e.g., \textit{adult} vs. \textit{child}) than older children, who enrich their drawings with more diagnostic part [@sitton1992drawing] and relational [@light1983effects] information. 
  
 What drives these dramatic changes in children's drawings across development? 
 A common view is that these changes are driven primarily by children's increasing ability to plan and control their motor movements [@freeman1987current; @rehrig2018does]. 
-While such changes in visuomotor control are clearly important, this view fails to account for other important constraints on children's drawings — including how children represent a given visual concept and how well children are able to access these concepts when producing drawings. 
+While such changes in visuomotor control are clearly important, this view fails to account for other important constraints on children's drawings — including what children know about a given target object and how well children are able to access this conceptual knowledge when producing a drawing. 
 
-Prior work provides evidence that changes in children's drawings partly reflect changes in children's representations of visual concepts. In a large observational dataset, older children produced drawings of object categories that were more diagnostic of the categories they were trying to depict [@long2018drawings; @long2021parallel]. This result held even when accounting for differences in basic shape tracing abilities and the amount of effort children expended on individual drawings. FUrthermore, older children also tended to rely more on these same diagnostic visual features when recognizing each other's drawings, suggesting that changes in children's internal visual representations drive parallel changes in children's production and recognition of drawings. Thus, the drawings that children produce likely not only reflect their increasing motor abilities but their evolving visual concepts [@natu2016development; @dekker2011dorsal]. 
+Prior work has provided evidence that changes in children's drawings partly reflect changes in children's mental representations of visual concepts. In a large observational dataset, older children produced drawings of object categories that were more diagnostic of the categories they were trying to depict [@long2018drawings; @long2021parallel]. This result held even when accounting for differences in basic shape tracing abilities and the amount of effort children expended on individual drawings. Furthermore, older children also relied more on these same diagnostic visual features when recognizing other children's drawings.
+Together, these results suggest that developmental change in these underlying conceptual representations drive parallel changes in both children's production and recognition of drawings, and thus that change in how well children can produce recognizable drawings do not only reflect improvements in motor control [@natu2016development; @dekker2011dorsal]. 
 
-However, this work leaves open the contribution of children's evolving memory. Children's ability to access semantic knowledge about categories and to maintain this information in mind when producing a drawing likely changes across childhood [@pailian2016visual]. Here, we directly test the idea that a principal reason younger children produce less recognizable drawings is because they simply have more difficulty recalling the relevant perceptual features of different categories: that is, when asked to "draw a [rabbit]", they may struggle to conjure up the relevant perceptual details and then hold in mind what rabbits tend to look like. On this account, providing children with additional perceptual information about different categories -- for example, via canonical photographs of typical exemplars -- could help them improve their drawings of these categories, as it does with adults [@fan2020relating]. 
+However, this work leaves open the contribution of children's evolving abilities to retrieve and maintain relevant information in memory. Children's ability to access semantic knowledge about categories and to maintain this information in mind when producing a drawing likely changes across childhood [@pailian2016visual]. Here, we directly test the idea that a principal reason younger children produce less recognizable drawings is because they simply have more difficulty recalling the relevant visual features of different categories: that is, when asked to "draw a [rabbit]", they may struggle to conjure up the relevant visual details and then hold in mind what rabbits tend to look like. On this account, providing children with additional visual information about different categories -- for example, via canonical photographs of typical exemplars -- could help them improve their drawings of these categories, as it does with adults [@fan2018common]. 
 
-However, prior work also suggests that younger children tend to draw what they know about objects rather than integrate the information in their immediate perceptual experience. For example, when asked to draw from observation, younger children tend to include features that are not visible from their vantage point, yet are diagnostic of category membership (e.g., a handle on a \textit{mug}) [@bremmer1984prior; @barrett1976symbolism], and only omit these features later in development. Similarly, young children will insist that their nearly identical drawings of different concepts (e.g., balloon and person) unambiguously refer to different things [@bloom1998intention]. 
+However, prior work also suggests that younger children tend to draw what they know about objects rather than integrate information in their immediate perceptual experience [@luquet1927dessin]. For example, when asked to draw from observation, younger children tend to include features that are not visible from their vantage point, yet are diagnostic of category membership (e.g., a handle on a \textit{mug}) [@bremmer1984prior; @barrett1976symbolism], and only omit these features later in development. Similarly, young children will insist that their nearly identical drawings of different concepts (e.g., balloon and person) unambiguously refer to different things [@bloom1998intention]. 
 Thus, an alternative possibility is that only older children may be able to produce more recognizable drawings when provided with canonical exemplars of different categories. 
-On this account, working memory constraints are not a major factor that drives developmental changes in children's drawings.
+On this account, memory constraints are not a major factor that drives developmental changes in children's drawings.
 
 To tease apart these alternatives, we investigated the development of children's ability to produce recognizable drawings of visual concepts when children were provided with a verbal cue ("Can you draw a [rabbit]?) versus when provided with a picture cue ("Can you draw this [rabbit] as it looks in the picture?"). On verbal-cue trials, children thus must access their mental representation of a "rabbit" and choose the features necessary to convey that object's identity. Conversely, on picture-cue trials, children are explicitly asked to rely on the visual features provided in a canonical photograph of each object category. 
 
-To test the generality of our findings, we recruited children from two different sites in different countries — San Jose, USA and Beijing, China.
-Most empirical studies on children's drawings have been conducted exclusively on small samples of children from the United States or Western Europe, limiting their generalizability. Further, children in different communities may spend more or less time practicing drawing or use different visual conventions to draw [@cohn2012explaining; @willats2006making]. While some prior work has focused on differences in children's drawings across different countries, most of this descriptive work has focused on differences in educational practices that may manifest in children's drawings [@la2001children; @winner1989can; @huntsinger2011cultural]. Instead, here we focus on the degree to which the overall developmental trajectory of drawing abilities are similar between children at these two sites. 
+To test the generality of our findings, we recruited children from two sites in different countries — San Jose, USA and Beijing, China.
+Most empirical studies on children's drawings have been conducted exclusively on small samples of children from the United States or Western Europe, limiting their generalizability. Further, children in different communities may spend more or less time practicing drawing or use different visual conventions to draw [@cohn2012explaining; @willats2006making]. While some prior work has focused on differences in children's drawings across different countries, most of this work has focused on differences in educational practices that are thought to manifest in children's drawings [@la2001children; @winner1989can; @huntsinger2011cultural]. Leaving aside questions about potential causes of differences between sites, here we focus on measuring the degree to which drawing abilities vary between children at these two sites using the same experimental protocol. 
 
-Finally, we assessed the degree to which visuomotor development accounts for observed developmental changes in drawing recognizability. While it is clear that visuomotor control influences how and what we can draw, little work has directly related measures of visuomotor control to drawing outcomes [@long2021parallel]. To do so, we measured each child's visuomotor control via a shape tracing task on a table and related these measurements of tracing accuracy to the recognizability of the drawings that each child produced. 
+Finally, we assessed the degree to which visuomotor development accounts for observed developmental changes in drawing recognizability. While it is uncontroversial that visuomotor control can constrain how and what we can draw, little work has directly related measures of visuomotor control to measures of drawing recognizability [@long2021parallel]. To do so, we measured each child's visuomotor control via a shape tracing task and related these measurements of tracing accuracy to the recognizability of the drawings that each child produced. 
 
-In the present study, we thus collect shape tracings and digital drawings of visual concepts from 4-9 year-old children in Beijing, China and San Jose, USA using both picture cues and verbal cues. In doing so, we make three major contributions to our understanding of the development of children's drawings. First, we replicate our prior findings  [@long2021parallel] that the recognizability of children's drawings increases steadily throughout this age range (4-9 years). Second, we test the degree to which working memory constraints might account for these developmental changes. In keeping with accounts of naïve realism and contra a strong account of working memory limitations, we predicted that only older children would be able to use the visual information present in the canonical photographs to improve their drawings, Third, we test the generalizability of our findings across two different countries. We predicted that we would see convergence in the development of drawing abilities across both geographical sites, with older children becoming progressively better at producing recognizable drawings. In addition, we predicted that most of the variance across geographical sites in drawing ability would be explainable by differences in visuomotor control, operationalized as performance on a shape tracing task; these primary analyses were pre-registered at https://osf.io/qymjr/.
-
+In sum, in the current study we collect shape tracings and digital drawings of visual concepts from 4-9 year-old children in Beijing, China and San Jose, USA using both picture cues and verbal cues. In doing so, we make three key contributions to our understanding of the development of children's drawings. First, we replicate our prior findings  [@long2021parallel] that the recognizability of children's drawings increases steadily throughout this age range (4-9 years). Second, we test the degree to which memory constraints might account for these developmental changes. In keeping with accounts of naïve realism and against a large role of limitations on memory, we predicted that only older children would be able to use the visual information present in the canonical photographs to improve their drawings. Third, we test the generalizability of our findings across two sites in different countries. We predicted that we would see convergence in the development of drawing abilities across both geographical sites, with older children becoming progressively better at producing recognizable drawings. In addition, we predicted that most of the variance across geographical sites in drawing ability would be explainable by differences in visuomotor control, operationalized as performance on a shape tracing task; these primary analyses were pre-registered at: https://osf.io/qymjr/.
 
 # Methods
 ```{r plotting-params}
@@ -546,7 +546,7 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
 ```
 
 # General Discussion
-Here, we examined the developmental trajectory of the recognizability of children's drawings across two different drawing tasks and geographical locations. Overall, we found a consistent developmental trajectory from 4-9 years of age, replicating previous work using observational datasets [@long2021parallel]. We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
+Here we examined the developmental trajectory of the recognizability of children's drawings across two different drawing tasks and geographical locations. Overall, we found a consistent developmental trajectory from 4-9 years of age, replicating previous work using observational datasets [@long2021parallel]. We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
 
 Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities, despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. A second possibility is that children from preschools near Beijing were simply more engaged with the task than children recruited at a children's museum outside San Jose, USA: A more academic context could have created an environment in which children felt particularly incentivized to spend more effort on their drawings. Nonetheless, our measures of drawing's effort (e.g., amount of time spent drawing, number of strokes made) did not account for differences in recognizability across sites. Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the recognizability of the drawings they produce, yet further suggests that it is far from the only factor that does so.
 
