up to end of methods!

--- a/writing/references.bib
+++ b/writing/references.bib
@@ -384,7 +384,11 @@
 }
 
 
-
+@article{paszke2017automatic,
+  title={Automatic differentiation in PyTorch},
+  author={Paszke, Adam and Gross, Sam and Chintala, Soumith and Chanan, Gregory and Yang, Edward and DeVito, Zachary and Lin, Zeming and Desmaison, Alban and Antiga, Luca and Lerer, Adam},
+  year={2017}
+}
 
 @article{pascalis2002face,
   title={Is face processing species-specific during the first year of life?},
@@ -1776,4 +1780,11 @@
   year = {2018},
   note = {R package version 0.3.0},
   url = {https://CRAN.R-project.org/package=viridisLite},
+}
+@Manual{R-tinylabels,
+  title = {{tinylabels}: Lightweight Variable Labels},
+  author = {Marius Barth},
+  year = {2021},
+  note = {R package version 0.2.1},
+  url = {https://github.com/mariusbarth/tinylabels},
 }
