--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -70,7 +70,7 @@ knitr::opts_chunk$set(fig.crop = FALSE,
 ```
 
 As humans, we have many powerful tools to externalize what we perceive and know, including language and gesture.
-One tool that has been especially transformative for human cognition and culture is graphical representation, which allows people to encode their thoughts in a visible, durable format. 
+One tool that has been especially transformative for human cognition and culture is graphical representation, which allows people to encode their thoughts in a visible, durable format.
 Drawing is an important case study in graphical representation, being a technique that dates back 60,000 years [@hoffmann2018u], well before the emergence of symbolic writing systems, and is practiced in many cultures.
 
 In modern times, drawings are produced prolifically by children from an early age. 
@@ -229,46 +229,72 @@ count_by_id <- d %>%
 ```
 
 ## Participants
-265 participants were recruited from two local children's museum in [BLINDED] and at preschool and elementary schools outside of Beijing; approximately equal numbers of participants were recruited in Northern California and the Beijing area. Our goal was to recruit 120 children between 4-9 years of age after exclusions (i.e. 20 4-year-olds, 20 5-year-olds, etc.) at each geographical site. In the San Jose based sample, 135 children participated in the experiment; 6 participants were excluded, (3) for skipping more than 6 drawing trials and (3) for scribbling three or more times in a row. Six additional participants were tested but their data was not recorded due to a technical error, and two participants never advanced past the practice trials, leading to a final sample of `r count_by_site$num_participants[1]` children. In the Beijing based sample, `r count_by_site$num_participants[2]` children participated; an additional 8 participants were tested but their data was not recorded due to a technical error with the remote database. Two 10-year-olds (aged 10 years, 0 months and 10 years, 1 month) were accidentally tested and included in the 9-year-old age group. On average, each child contributed `r mean(count_by_id$num_drawings)` drawings to analysis (min `r min(count_by_id$num_drawings)`, max = `r max(count_by_id$num_drawings)`). No additional demographic data was recorded about the participants. This protocol was approved by both the Institutional Review Board at [blinded] (43992, Development of Children's Drawing Abilities) and the Department of Psychology Ethics Committee at [blinded] in Beijing, China.
+265 participants were recruited from two local children's museum in [BLINDED] and at preschool and elementary schools outside of Beijing; approximately equal numbers of participants were recruited in Northern California and the Beijing area. Our goal was to recruit 120 children between 4-9 years of age after exclusions (i.e. 20 4-year-olds, 20 5-year-olds, etc.) at each geographical site. In the San Jose sample, 135 children participated in the experiment; 6 participants were excluded, (3) for skipping more than 6 drawing trials and (3) for scribbling three or more times in a row. Six additional participants were tested but their data was not recorded due to a technical error, and two participants never advanced past the practice trials, leading to a final sample of `r count_by_site$num_participants[1]` children. In the Beijing sample, `r count_by_site$num_participants[2]` children participated; an additional 8 participants were tested but their data was not recorded due to a technical error with the remote database. Two 10-year-olds (aged 10 years, 0 months and 10 years, 1 month) were accidentally tested and included in the 9-year-old age group. On average, each child contributed `r mean(count_by_id$num_drawings)` drawings to analysis (min `r min(count_by_id$num_drawings)`, max = `r max(count_by_id$num_drawings)`). No additional demographic data was recorded about the participants. This protocol was approved by both the Institutional Review Board at [blinded] (43992, Development of Children's Drawing Abilities) and the Department of Psychology Ethics Committee at [blinded] in Beijing, China.
 
-## Task Procedure
+## Stimuli and Task Procedure
 
-Children participated in a drawing game using their fingers to draw, completing 2 shape tracing trials and 12 object category drawing trials. Children drew using an Ipad Pro (12.9") that was set at a slight angle on a table via a tablet case, and had maximum of 30 seconds to produce their tracings and drawings. Strokes could not be deleted once drawn, and stroke-by-stroke data for each drawing was stored on a remote server.
-
-Before beginning the drawing game, a trained experimenter first told each child “After this game is over, someone is going to try to recognize what you were trying to draw. So, please draw so that someone else could try what you were trying to draw.” A native English speaker gave these instructions to the San Jose based sample, and a native Mandarin speaker gave a translation of these instructions to the Beijing based sample. 
-
-After these instructions, children first completed two series of tracing trials to obtain an estimate of their tracing abilities; children were first asked to trace a square and then a complex shape (see Figure \ref{fig:example-tasks}).  The primary experimental manipulation was the type of cue that children heard on the subsequent drawing trials (see task examples in Figure \ref{fig:example-tasks}). Children completed six trials with the same cue type (verbal or picture cue) before switching cue types; this order was counterbalanced across participants. On verbal cue trials, children saw a short video clip where an experimenter said,  “What about a [cat]? Can you draw a [cat]?”.  On picture-cue trials, children heard audio of the same experimenter who said,  “What about this [cat]? Can you draw the [cat] as it looks in the picture?”  while seeing a canonical photograph of each category. This photograph was randomly sampled from one of three possible exemplars and remained on the screen for the duration of the drawing trial. All experimental code, videos, translations, and stimuli are available on the public repository for this project. 
+Children were seated in front of a touchscreen tablet (Ipad Pro 12.9") during each drawing session.
+At the beginning of the session, a trained experimenter first told each child, “After this game is over, someone is going to try to recognize what you were trying to draw. So, please draw so that someone else could guess what you were trying to draw.” 
+A native English speaker gave these instructions to the San Jose sample, and a native Mandarin speaker gave a translation of these instructions to the Beijing sample. 
+Following these instructions, children completed 2 shape-tracing trials, providing a baseline measure of visuomotor control in the absence of memory demands.
+All children first traced a square, then a more complex shape (see Figure \ref{fig:example-tasks}).
+After these tracing trials, children produced drawings of 12 familiar object categories (airplane, bike, bird, car, cat, chair, cup, hat, house, rabbit, tree, watch).
+Strokes could not be deleted once drawn, and children had to complete each trial within 30 seconds.
+Across trials, we manipulated the type of cue (verbal vs. picture) children received before producing each drawing (Fig. \ref{fig:example-tasks}), providing a measure of the impact of reminding children of what typical exemplars of each category looked like. 
+Specifically, children first completed six trials with one cue type, then switched to the other cue type. 
+The order in which each cue type was used was counterbalanced across children.
+On verbal-cue trials, children viewed a short video clip in which an experimenter named the target category: “What about a [cat]? Can you draw a [cat]?”.  
+On picture-cue trials, children viewed a photograph of a typical exemplar of the target category while listening to an audio clip of the same experimenter who said, “What about this [cat]? Can you draw the [cat] as it looks in the picture?”
+The photograph remained on the screen for the duration of the drawing trial.
+There were three different exemplars of each category used in this study, one of which was randomly sampled on each picture-cue trial.
+All experimental code, videos, translations, and stimuli are available on the public repository for this project. 
 
 ```{r example-tasks, fig.env = "figure", out.width="100%", fig.pos = "H", fig.cap = "Example trials from the tracing assessment and two drawing tasks."}
 knitr::include_graphics("figs/task_examples.png")
 ```
 
 ## Measuring drawing effort covariates
-For each drawing trial, children had up to 30 seconds to complete their drawings with their fingers. We recorded both the final drawings and the parameters of each stroke produced by children, allowing us to estimate the amount of time children put into their drawings (e.g., end time of last stroke — start time of first stroke). As a second measure of effort, we also counted the number of strokes that children put into a given drawing. Finally, we estimated the proportion of the drawing canvas that was filled (e.g., 'ink used') by computing the proportion of each final drawing that were non-white pixels.
+We recorded both the final drawings and the location of each stroke in a digital format, allowing us to precisely measure several different variables that provided proxies for the amount of effort children invested in producing each drawing.
+Specifically, we measured: (1) the amount of time spent (i.e., end time of last stroke — start time of first stroke), (2) the number of individual strokes drawn, and (3) the amount of "ink" used (i.e., proportion of drawing canvas that was filled). 
 
 ## Measuring Tracing Accuracy
-As in prior work [@long2021parallel], we used a semi-automated procedure for evaluating how accurately each child performed the tracing task that was validated against empirical judgments of tracing quality. In brief, we decomposed tracing accuracy into two components: a shape error component and a spatial error component. Shape error reflects how closely the participant’s tracing matched the contours of the target shape; the spatial error reflects how closely the location, size, and orientation of the participant’s tracing matched the target shape. These two error components were computed automatically for each tracing and used to yield a "tracing score" for each tracing that mirrors adult human judgements of tracing quality (see Appendix for details).
+As in prior work [@long2021parallel], we used a semi-automated procedure for evaluating how accurately each child performed the tracing task that was validated against empirical judgments of tracing quality. In brief, we decomposed tracing accuracy into two components: a shape error component and a spatial error component. Shape error reflects how closely the participant’s tracing matched the contours of the target shape; the spatial error reflects how closely the location, size, and orientation of the participant’s tracing matched the target shape. These two error components were computed automatically for each tracing and used to yield a "tracing score" for each tracing that mirrors adult human judgments of tracing quality (see Appendix for details).
 
 ## Measuring drawing recognizability 
 
 ### Human recognition scores
-We assessed the recognizability of each drawing via an online recognition experiment. Adult participants based in the U.S. were recruited via Prolific for a 15 minute experiment, compensated at $14/hour, and asked to recognize a random subset of around 140 drawings that were balanced with respect to age, category, and site. Each drawing was recognized by 10 participants. Participants were shown these drawings in a random order and asked "What does this look like?". Participants selected an answer from the twelve categories that children were prompted to draw and were encouraged to guess. No participants were excluded from analysis for missing a catch trial (a free response describing the task that were completing). These binary recognition scores were then averaged across participants to yield a recognition score for each drawing.
-(e.g., recognized by 80% of participants).
+We measured the recognizability of each drawing via an online recognition experiment. 
+Adult participants based in the U.S. were recruited via Prolific for a 15-minute experiment, compensated at $14/hour, and asked to identify the category depicted in a random subset of approximately 140 drawings. 
+Each subset of drawings was balanced with respect to age, category, and site, and each drawing was shown to 10 participants. 
+Participants were shown these drawings in a random sequence and asked "What does this look like?"
+Participants selected their responses from the set of 12 categories and were encouraged to provide their best guess if they were unsure. 
+No participants were excluded from analysis for missing the catch trial, which was included to verify that participants could accurately describe their goal in this task. 
+We then computed a recognition score for each drawing, reflecting the proportion of participants who correctly identified the target category. 
 
 ### Automated recognition scores
-We used a combination of deep CNN activations and logistic regressions to obtain automated recognition scores, as per our pre-registered protocol. To encode the high-level visual features of each sketch, we used the VGG-19 architecture [@simonyan2014very] a deep convolutional neural network pre-trained on Imagenet classification. We used model activations in the second-to-last layer of this network (FC6). Raw feature representations in this layer consist of flat 4096-dimensional vectors, to which we applied channel-wise normalization.  Next, we used these features to train object category decoders; we then trained a 12-way logistic classifier with L2 regularization (tolerance = .1, regularization = .1), and used this classifier to estimate the category label for each drawing in the dataset.To avoid any bias due to imbalance in the distribution of drawings over categories, we randomly under sampled such that there were an equal number of drawings for each combination of geographical site (San Jose, Beijing) and the 12 categories. No additional metadata about the age of the child who produced each sketch was provided to the decoder. This procedure was repeated for each drawing in the dataset, yielding a binary a recognition score for each drawing.
+We used a combination of deep convolutional neural network (CNN) features and logistic regression to obtain automated recognition scores, per our preregistered protocol. 
+To encode the high-level visual features of each drawing, we passed each drawing into VGG-19 [@simonyan2014very], a deep CNN architecture that had been pre-trained on Imagenet classification and implemented in PyTorch [@paszke2017automatic].
+We extracted the feature representation of this drawing in the second-to-last layer of this network (FC6). 
+Feature representations in this layer consist of flat 4096-dimensional vectors, to which we applied channel-wise normalization. 
+Next, we used these features to train a 12-way logistic classifier with L2 regularization (tolerance = .1, regularization = .1), and used this classifier to predict the category label for each drawing.
+To ensure a balanced distribution of drawings appearing in the training set, we randomly undersampled such that there was an equal number of drawings for each combination of geographical site (San Jose, Beijing) and the 12 categories. 
+\textbf{jefan query: Here we describe the training data distribution, but not the test set? What kind of train/test splitting procedure did we use here (LOO? 80/20 CV?)}
+No additional metadata about the age of the child who produced each sketch was provided to the model. 
+This procedure was repeated for each drawing in the dataset, yielding a binary recognition score for each drawing.
 
 ## Statistical models
 ```{r}
 human_v_model = cor.test(humans_and_models_merged$prop_correct, humans_and_models_merged$correct_or_not)
 ```
 
-To assess our main hypotheses, we fit generalized linear mixed effects models to the human recognition scores to assess the factors that influenced the recognizability of the drawings that children produced. A first generalized linear mixed effect model was fit to the recognizability scores for each drawing, including fixed effects of children's age (in years), geographical site (San Jose vs. Beijing), and drawing task (verbal cue vs. picture cue) and the three way interaction between these key variables. We initially planned to include random slopes for the effect of drawing task on each child (as this varied within-subjects), and random slopes for the effect the full three-way interactions between task, age, and site on each category. However, models with this complicated random effects structure failed to converge, and the reported models use the maximal random effects structure that did converge -- which included random sloops for the two-way interaction between task and age on each category.
+To evaluate our main hypotheses, we fit generalized linear mixed-effects models to the human recognition scores to assess the factors that influenced the recognizability of the drawings that children produced. A first generalized linear mixed effect model was fit to the recognizability scores for each drawing, including fixed effects of children's age (in years), geographical site (San Jose vs. Beijing), and drawing task (verbal cue vs. picture cue) and the three-way interaction between these key variables. We initially planned to include random slopes for the effect of drawing task on each child (as this varied within-subjects), and random slopes for the effect the full three-way interactions between task, age, and site on each category. However, models with this random-effects structure failed to converge, and the reported models use the maximal random effects structure that did converge, which included random slopes for the two-way interaction between task and age on each category.
 
-In a secondary analysis, we aimed to understand the degree to which any of the above effects were mediated by (1) children's tracing abilities and (2) the amount of effort that children expended while drawings. We thus ran the same main model while also now including fixed effects of children's estimated tracing score (see Measuring Tracing Abilities), the time children spent drawing (in seconds), the mean intensity of the drawing (i.e. percentage of non-white pixels), and the number of strokes children used. All predictors were scaled to have a mean of 0 and a standard deviation of 1. Finally, we also assessed the degree to which tracing ability development differed by geographical site, where tracing scores were modeled as a function of age (in years), site, and their interaction, with the same random effects structure as the first model.
+In a secondary analysis, we investigated the degree to which any of the above effects were mediated by children's tracing abilities or the amount of effort that children expended while drawings. 
+We thus fit the same model above, with the addition of fixed-effect terms for each child's estimated tracing score (see Measuring Tracing Abilities), the time that child spent drawing (in seconds), the amount of "ink" used (i.e. percentage of non-white pixels in the drawn image), and the number of strokes. 
+These additional predictors were first z-scored before being included in the model.
+Finally, we also assessed the degree to which tracing ability development differed across geographical sites, where tracing scores were modeled as a function of age (in years), site, and their interaction, with the same random-effects structure as the first model.
  
-This analysis plan was pre-registered at https://osf.io/qymjr. While we had initially planned to use automated recognition scores as our main dependent variable, following prior work [@long2021parallel],  we found that these automated recognition scores were only modestly correlated with human recognition scores ($r$ = `r round(human_v_model$estimate,2)`, $t$ = `r round(human_v_model$statistic,2)`, p < .001); furthermore, descriptive plots of the automated recognition scores revealed a overall difference between the two drawing tasks that was not evident in the human recognition data. To be conservative, we thus fit all of our models to the human recognition data but have made all model classifications available for future research.
- 
+This analysis plan was pre-registered at https://osf.io/qymjr. While we had initially planned to use automated recognition scores as our main dependent variable, following prior work [@long2021parallel], we found that these automated recognition scores were only modestly correlated with human recognition scores ($r$ = `r round(human_v_model$estimate,2)`, $t$ = `r round(human_v_model$statistic,2)`, p < .001); furthermore, descriptive plots of the automated recognition scores revealed an overall difference between the two drawing tasks that was not evident in the human recognition data. To be conservative, we thus fit all of our models to the human recognition data but have made all model predictions available to facilitate future research.  
 
 ```{r}
 full_model <- glmer(cbind(num_correct, num_incorrect) ~ condition*scale(age_numeric)*site +
