--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -290,7 +290,7 @@ human_v_model = cor.test(humans_and_models_merged$prop_correct, humans_and_model
 To evaluate our main hypotheses, we fit generalized linear mixed-effects models to the human recognition scores to assess the factors that influenced the recognizability of the drawings that children produced. A first generalized linear mixed effect model was fit to the recognizability scores for each drawing, including fixed effects of children's age (in years), geographical site (San Jose vs. Beijing), and drawing task (verbal cue vs. picture cue) and the three-way interaction between these key variables. We initially planned to include random slopes for the effect of drawing task on each child (as this varied within-subjects), and random slopes for the effect the full three-way interactions between task, age, and site on each category. However, models with this random-effects structure failed to converge, and the reported models use the maximal random effects structure that did converge, which included random slopes for the two-way interaction between task and age on each category.
 
 In a secondary analysis, we investigated the degree to which any of the above effects were mediated by children's tracing abilities or the amount of effort that children expended while drawings. 
-We thus fit the same model above, with the addition of fixed-effect terms for each child's estimated tracing score (see Measuring Tracing Abilities), the time that child spent drawing (in seconds), the amount of "ink" used (i.e. percentage of non-white pixels in the drawn image), and the number of strokes. 
+We fit the same model above with additional fixed-effects terms for each child's estimated tracing score (see Measuring Tracing Abilities), the time that child spent drawing (in seconds), the amount of "ink" used (i.e. percentage of non-white pixels in the drawn image), and the number of strokes produced. 
 These additional predictors were first z-scored before being included in the model.
 Finally, we also assessed the degree to which tracing ability development differed across geographical sites, where tracing scores were modeled as a function of age (in years), site, and their interaction, with the same random-effects structure as the first model.
  
@@ -335,7 +335,7 @@ site_difference_out = summary(site_difference)
  
 # Results
 ### Confirmatory Analyses
-Overall, we found relative consistency in the developmental trajectory of children's drawings: Figure \ref{fig:main-results} shows the recognizability of children's drawings at each age as a function of the drawing task and the geographical site that they were located in (all model coefficients can be found in Table 1). We found steady changes in the recognizability of children's drawings across this age range, replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. Further, we found that these changes in recognizability did not depend on the drawing task children completed: Children's drawings were equally recognizable when they were asked to "Draw this rabbit as it looks in the picture" versus they were simply asked "Can you draw a rabbit?". While we anticipated that older children might produce more recognizable drawings when provided with a picture cue -- as do adults when presented with canonical photographs of object categories [@yang2021visual] -- this was not the case. However, we did observe a main effect of geographical site: we found that children from Beijing, China overall tended to produce more recognizable drawings than children from San Jose, USA (see coefficients in Table 1). A closer look comparing the recognizability of the drawings made at children at each age and site hints that the children from Beijing, China may tend to produce more recognizable drawings earlier in development.  
+Overall, we found general consistency in the developmental trajectory of children's drawings: Figure \ref{fig:main-results} shows the recognizability of children's drawings at each age as a function of cue type (picture, verbal) and geographical site (San Jose, Beijing; all model coefficients can be found in Table 1). We found steady changes in the recognizability of children's drawings across this age range, replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. Further, we found that these changes in recognizability did not depend on the drawing task children completed: Children's drawings were equally recognizable when they were asked to "Draw this rabbit as it looks in the picture" versus they were simply asked "Can you draw a rabbit?". While we anticipated that older children might produce more recognizable drawings when provided with a picture cue -- as do adults when presented with canonical photographs of object categories [@yang2021visual] -- this was not the case. However, we did observe a main effect of geographical site: we found that children from Beijing, China overall tended to produce more recognizable drawings than children from San Jose, USA (see coefficients in Table 1). A closer look comparing the recognizability of the drawings made at children at each age and site hints that the children from Beijing, China may tend to produce more recognizable drawings earlier in development.  
 
 In a second set of analyses, we aimed to understand the nature of this difference in recognizability across sites. We initially hypothesized that any differences in the recognizability of children's drawings across sites would be mediated by the amount of effort children expended while drawing or their tracing abilities.  We thus first examined how effort and tracing abilities varied across task, age, and geographical location. Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  Children tended to spend more time drawing provided with a picture cue and asked to draw "the [rabbit] as it looks in the picture", and children from Beijing tended to spend more time drawing overall. In contrast, children's tracing abilities did not vary across geographical site: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
 
