--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -334,16 +334,24 @@ site_difference_out = summary(site_difference)
  
 # Results
 ### Confirmatory Analyses
-Overall, we found general consistency in the developmental trajectory of children's drawings: Figure \ref{fig:main-results} shows the recognizability of children's drawings at each age as a function of cue type (picture, verbal) and geographical site (San Jose, Beijing; all model coefficients can be found in Table 1). We found steady changes in the recognizability of children's drawings across this age range, replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. Further, we found that these changes in recognizability did not depend on the drawing task children completed: Children's drawings were equally recognizable when they were asked to "Draw this rabbit as it looks in the picture" versus they were simply asked "Can you draw a rabbit?". While we anticipated that older children might produce more recognizable drawings when provided with a picture cue -- as do adults when presented with canonical photographs of object categories [@yang2021visual] -- this was not the case. However, we did observe a main effect of geographical site: we found that children from Beijing, China overall tended to produce more recognizable drawings than children from San Jose, USA (see coefficients in Table 1). A closer look comparing the recognizability of the drawings made at children at each age and site hints that the children from Beijing, China may tend to produce more recognizable drawings earlier in development.  
 
-In a second set of analyses, we aimed to understand the nature of this difference in recognizability across sites. We initially hypothesized that any differences in the recognizability of children's drawings across sites would be mediated by the amount of effort children expended while drawing or their tracing abilities.  We thus first examined how effort and tracing abilities varied across task, age, and geographical location. Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  Children tended to spend more time drawing provided with a picture cue and asked to draw "the [rabbit] as it looks in the picture", and children from Beijing tended to spend more time drawing overall. In contrast, children's tracing abilities did not vary across geographical site: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
+We found steady changes in the recognizability of children's drawings as a function of age (Figure \ref{fig:main-results}), replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. 
+Moreover, we found that this age-related change did not depend on the drawing task children completed: Children's drawings were just as recognizable when they were cued with a photograph ("Draw this rabbit as it looks in the picture") as when they were cued with the category label ("Can you draw a rabbit?").  
+While we thought that older children might produce more recognizable drawings when cued with a photograph of a highly prototypical exemplar based on prior work with adult participants [@yang2021visual], we did not find evidence of an interaction between age and cue type. 
+However, we did observe a main effect of geographical site: children in Beijing, China producde more recognizable drawings than children in San Jose, USA (Table 1). A closer look comparing the recognizability of the drawings made by children at each age and site hints that the children in the Beijing group produced more recognizable drawings earlier in development. 
 
-We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). If the amount of effort spent or children's tracing abilities accounted the differences between sites that we observed, we reasoned that we should no longer observe a main effect of geographical location on drawing recognizability. Contra this hypothesis, however, we still observed a significant effect of geographical site (see Table 2), despite the fact that individual children's tracing abilities were strong predictors of how recognizable their drawings were. In addition, the amount of time a child spent drawing was in fact a significant negative predictor of recognizability -- indicating that the amount of effort that children expended did not necessarily result in a drawing that was more recognizable to others. Thus, these results suggest that these two groups of children differ in their ability to produce recognizable drawings of object categories in a way that is not easily explainable by effort covariates or tracing abilities. 
+In follow-up analyses, we aimed to understand the nature of this difference in recognizability across sites. 
+We initially hypothesized that any differences in drawing recognizability between sites would be mediated by the amount of effort children expended while drawing or their tracing abilities. 
+Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  
+We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose. 
+By contrast, children's tracing abilities did not vary across geographical sites: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
+
+We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). If effort and/or tracing ability is sufficient to account for the differences between sites, we reasoned that we should no longer observe a main effect of geographical site on drawing recognizability in this expanded statistical model. Contra this hypothesis, we still observed a significant effect of geographical site (see Table 2), even having accounted for the effect of individual differences in tracing ability. We also found that the amount of time a child spent drawing negatively predicted recognizability -- indicating that spending more time on a drawing did not necessarily result in a more recognizable drawing. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
 
 ### Exploratory Analyses
-In a third set of exploratory analyses, we examined how the developmental trajectory of the recognizability of children's drawings differ for different object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we had no strong hypotheses about how these trajectories might additionally vary with geographical locations. 
+In a set of exploratory analyses, we examined how the developmental trajectory of the recognizability of children's drawings differ for different object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
 
-Figure \ref{fig:item-effects} shows the recognizability of children's drawings for each of the 12 categories a function of geographical location and children's age and reveal considerable variability.  For example, certain categories (e.g., cats and rabbits) were overall more difficult for children to depict such that they were distinct from one another, particularly for younger children. In addition, children from Beijing produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children from San Jose produced more recognizable drawings of bikes.  Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. These exploratory analyses thus reveal systematic differences between object categories and geographical site that do not seem easily attributable to differences in effort.
+Figure \ref{fig:item-effects} shows considerable variation in drawing recognizability across the 12 categories as a function of geographical site and age.  For example, certain distinctions between similar categories (e.g., cats and rabbits) were more difficult to make, especially for younger children. In addition, children in the Beijing group produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children in San Jose produced more recognizable drawings of bikes. Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. As a whole, these exploratory analyses provide converging evidence for systematic differences between object categories and geographical site that are not easily attributable to differences in effort.
 
 ```{r render-drawings, include=FALSE}
 # set.seed(123)
