--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -335,12 +335,12 @@ site_difference_out = summary(site_difference)
 # Results
 ### Confirmatory Analyses
 
-We found steady changes in the recognizability of children's drawings as a function of age (Figure \ref{fig:main-results}), replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. 
+We found steady changes in the recognizability of children's drawings as a function of age (Figure \ref{fig:main-results}), replicating prior work using the verbal-cue paradigm under less controlled settings [@long2021parallel]. 
 Moreover, we found that this age-related change did not depend on the drawing task children completed: Children's drawings were just as recognizable when they were cued with a photograph ("Draw this rabbit as it looks in the picture") as when they were cued with the category label ("Can you draw a rabbit?").  
-While we thought that older children might produce more recognizable drawings when cued with a photograph of a highly prototypical exemplar based on prior work with adult participants [@yang2021visual], we did not find evidence of an interaction between age and cue type. 
-However, we did observe a main effect of geographical site: children in Beijing, China producde more recognizable drawings than children in San Jose, USA (Table 1). A closer look comparing the recognizability of the drawings made by children at each age and site hints that the children in the Beijing group produced more recognizable drawings earlier in development. 
+While we thought that older children might produce more recognizable drawings when cued with a photograph of a highly prototypical exemplar, as adult participants do [@yang2021visual], we did not find evidence of an interaction between age and cue type. 
+However, we did observe a main effect of geographical site: children in Beijing, China produced drawings that were more recognizable than children in San Jose, USA (Table 1), reflecting steeper age-related gains earlier in development. 
 
-In follow-up analyses, we aimed to understand the nature of this difference in recognizability across sites. 
+In follow-up analyses, we investigated potential sources of variation that might explain these site-related differences. 
 We initially hypothesized that any differences in drawing recognizability between sites would be mediated by the amount of effort children expended while drawing or their tracing abilities. 
 Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  
 We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose. 
@@ -579,7 +579,10 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
 ```
 
 # General Discussion
-Here we examined the developmental trajectory of the recognizability of children's drawings across two different drawing tasks and geographical locations. Overall, we found a consistent developmental trajectory from 4-9 years of age, replicating previous work using observational datasets [@long2021parallel]. We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
+Here we examined developmental change in children's ability to produce recognizable drawings of familiar object concepts and potential variation in task performance due to demands on memory. 
+We found steady improvement from 4-9 years of age in two groups of children tested in different sites, replicating prior work [@long2021parallel]. 
+
+We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
 
 Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities, despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. A second possibility is that children from preschools near Beijing were simply more engaged with the task than children recruited at a children's museum outside San Jose, USA: A more academic context could have created an environment in which children felt particularly incentivized to spend more effort on their drawings. Nonetheless, our measures of drawing's effort (e.g., amount of time spent drawing, number of strokes made) did not account for differences in recognizability across sites. Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the recognizability of the drawings they produce, yet further suggests that it is far from the only factor that does so.
 
